--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
     <uses-permission-sdk-23 android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission-sdk-23 android:name="android.hardware.sensor.stepdetector" android:requiredFeature="true"/>
     <uses-permission-sdk-23 android:name="android.permission.WAKE_LOCK" />
+    <uses-permission-sdk-23 android:name="android.permission.VIBRATE"/>
 
     <uses-feature
         android:name="android.hardware.sensor.stepcounter"
         android:required="true"/>
 
     <application
+        android:name="com.vainpower.strider.Strider"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_custom_round"
         android:label="@string/app_name"
